add_subdirectory(STM32CoreLib)
add_subdirectory(Adafruit_GFX)
add_subdirectory(ILI9341_SPI)
add_subdirectory(ILI9341_LTDC)
add_subdirectory(ST7735_SPI)
add_subdirectory(ST7789_SPI)
add_subdirectory(ST7789_FMC)
add_subdirectory(ST7789_FMC16Bit)
add_subdirectory(Adafruit_SGP30)
add_subdirectory(ArduinoJson)
add_subdirectory(AudioPlayer)
add_subdirectory(BMP280)
add_subdirectory(BurstSerial)
add_subdirectory(CvCore)
add_subdirectory(DS18B20)
add_subdirectory(DS1302)
add_subdirectory(eeprom)
add_subdirectory(LIS3DH)
add_subdirectory(LIS3DSH)
add_subdirectory(LSM6DSL)
add_subdirectory(LTR5XX)
add_subdirectory(MMC3680KJ)
add_subdirectory(NECIR)
add_subdirectory(nlohmann)
add_subdirectory(PulseOut)
add_subdirectory(QMC5883L)
add_subdirectory(Servo)
add_subdirectory(SHT31)
add_subdirectory(SHT40)
add_subdirectory(SHTC1)
add_subdirectory(Stepper28BYJ_48)
add_subdirectory(STS_Servos)
add_subdirectory(TextLCD)
add_subdirectory(tinyxml2)
add_subdirectory(VKL144)
add_subdirectory(XPT2046)
add_subdirectory(liblightmodbus)
add_subdirectory(FT6336)
add_subdirectory(STMP811)
add_subdirectory(JPEGDEC)
add_subdirectory(SDIOBlockDevice)
add_subdirectory(MW31)
add_subdirectory(MXCHIP)