add_library(sdio-blockdevice INTERFACE)
target_sources(sdio-blockdevice INTERFACE SDIOBlockDevice.cpp)
target_include_directories(sdio-blockdevice INTERFACE .)
if("STM32L4" IN_LIST MBED_TARGET_LABELS)
    add_subdirectory(TARGET_STM32L4)
elseif("STM32H7" IN_LIST MBED_TARGET_LABELS)
    add_subdirectory(TARGET_STM32H7)
endif()
target_link_libraries(sdio-blockdevice INTERFACE mbed-storage-blockdevice)
